Fix small layout problem in the login component

--- a/nexus-ai/src/app/login/login.component.css
+++ b/nexus-ai/src/app/login/login.component.css
@@ -41,16 +41,16 @@ h1 {
   align-items: center;
 
   width: 100%;
-  height: auto;          /* adjust height as needed */
+  height: 0;          /* adjust height as needed */
 
-  margin-top: 8rem;
-  margin-bottom: 2rem;
+  margin-top: 6rem;
+  margin-bottom: 2.5rem;
 }
 
  .logo-icon {
   width: 60px;
   height: 60px;
-  background-image: url('https://sdmntpreastus2.oaiusercontent.com/files/00000000-8afc-61f6-81f3-dc919966401d/raw?se=2025-05-11T23%3A53%3A27Z&sp=r&sv=2024-08-04&sr=b&scid=00000000-0000-0000-0000-000000000000&skoid=add8ee7d-5fc7-451e-b06e-a82b2276cf62&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-05-11T22%3A23%3A38Z&ske=2025-05-12T22%3A23%3A38Z&sks=b&skv=2024-08-04&sig=d/x7Lq0KZjTSE5OeX6FOVxij3fePXn/KgQSLwbRmlPI%3D');
+  background-image: url('https://sdmntpreastus2.oaiusercontent.com/files/00000000-8afc-61f6-81f3-dc919966401d/raw?se=2025-05-12T21%3A30%3A05Z&sp=r&sv=2024-08-04&sr=b&scid=00000000-0000-0000-0000-000000000000&skoid=add8ee7d-5fc7-451e-b06e-a82b2276cf62&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-05-12T16%3A17%3A53Z&ske=2025-05-13T16%3A17%3A53Z&sks=b&skv=2024-08-04&sig=WFIHiuA25lUOYVK8292%2BTUzsWRY0ovG3n/FbcAO6iwo%3D');
   background-size: 150%;
   background-repeat: no-repeat;
   background-position: center;
@@ -94,7 +94,9 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  /* gap:70px; */
   align-items: center;
+  overflow: hidden;
 
 
   animation: zoomEffect 10s ease-in-out infinite, gradientMove 20s ease infinite;
